--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   },
   "dependencies": {
     "@sentry/node": "5.8.0",
-    "aws-sdk": "^2.608.0",
+    "aws-sdk": "^2.682.0",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.2",
     "cors": "^2.8.5",
-    "date-fns": "^2.0.0-beta.2",
+    "date-fns": "^2.14.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -49,7 +49,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.5",
     "multer": "^1.4.2",
-    "multer-s3": "^2.9.0",
+    "multer-sharp-s3": "^0.2.0",
     "node-ses": "^2.2.1",
     "nodemailer": "^6.3.0",
     "nodemailer-express-handlebars": "^3.1.0",
@@ -60,7 +60,7 @@
     "redis": "^2.8.0",
     "require-dir": "^1.2.0",
     "sequelize": "^5.10.1",
-    "sharp": "^0.23.1",
+    "sharp": "^0.25.3",
     "socket.io": "^2.3.0",
     "youch": "^2.0.10",
     "yup": "^0.27.0"
